[gd_scene load_steps=4 format=2]

[ext_resource path="res://launcher/scenes/main/comboBoxWeeks.gd" type="Script" id=1]
[ext_resource path="res://launcher/scenes/main/gfx/arrowdown.png" type="Texture" id=2]
[ext_resource path="res://launcher/scenes/main/RunButton.gd" type="Script" id=3]

[node name="main" type="Node2D"]

[node name="background" type="ColorRect" parent="."]
margin_left = -13.0
margin_top = -7.0
margin_right = 1289.0
margin_bottom = 732.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_top = 160.0
margin_right = 1017.0
margin_bottom = 174.0
text = "Select a week to run"
align = 1

[node name="comboBoxWeeks" type="Button" parent="."]
margin_left = 406.0
margin_top = 192.0
margin_right = 608.0
margin_bottom = 214.0
text = "None"
icon = ExtResource( 2 )
align = 0
icon_align = 2
expand_icon = true
script = ExtResource( 1 )

[node name="WeekList" type="ItemList" parent="comboBoxWeeks"]
margin_left = 16.0
margin_top = 22.0
margin_right = 202.0
margin_bottom = 156.0

[node name="RunButton" type="Button" parent="."]
margin_left = 406.0
margin_top = 372.0
margin_right = 608.0
margin_bottom = 407.0
disabled = true
text = "Run"
script = ExtResource( 3 )

[connection signal="pressed" from="comboBoxWeeks" to="comboBoxWeeks" method="_on_comboBoxWeeks_pressed"]
[connection signal="week_selected" from="comboBoxWeeks" to="RunButton" method="_on_comboBoxWeeks_week_selected"]
[connection signal="item_selected" from="comboBoxWeeks/WeekList" to="comboBoxWeeks" method="_on_WeekList_item_selected"]
[connection signal="pressed" from="RunButton" to="RunButton" method="_on_RunButton_pressed"]
